fixing images and mobile spacing

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ h1 {
 }
 
 .section-title {
-    margin: 1em 0 3em 0;
+    margin: 1em 0 2em 0;
     padding: 0;
     line-height: 60px;
     font-weight: 700;
@@ -107,8 +107,8 @@ h1 {
 .portfolio-container {
     display: flex;
     align-items: center;
-    margin-top: -10%;
-    margin-bottom: 5%;
+    margin-top: -15%;
+    margin-bottom: 15%;
 }
 
 .container_image {
@@ -127,19 +127,11 @@ h1 {
 .about-me-container .profile-picture {
     display: block;
     margin: auto;
-    margin-top: -1em;
-    margin-bottom: 6em;
+    margin-top: -3em;
+    margin-bottom: 1em;
     width: 50%;
-    max-width: 500px;
-    min-width: 400px;
-}
-
-.rotate90 {
-    -webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    transform: rotate(-90deg);
+    max-width: 400px;
+    min-width: 300px;
 }
 
 .skills-container {
@@ -155,7 +147,7 @@ h1 {
 }
 
 .skills-container ul:first-child {
-    margin-top: -10%;
+    margin-top: -7%;
 }
 
 .technical-skills li {
@@ -307,6 +299,11 @@ input[type=submit] {
     font-size: 15px;
 }
 
+@media only screen and (min-width: 580px) {
+    .section-title {
+        margin: 1em 0 3em 0;
+    }
+}
 
 @media only screen and (min-width: 680px) {
 
@@ -373,7 +370,7 @@ input[type=submit] {
     }
 
     .portfolio-container {
-        margin-bottom: 1%;
+        margin-bottom: 10%;
     }
 
     .container_text {
@@ -382,14 +379,19 @@ input[type=submit] {
     }
 
     .about-me-container .profile-picture {
-        margin: auto;
-        max-width: 40%;
-        min-width: 40%;
+        margin-top: -3em;
+        max-width: 25%;
+        min-width: 25%;
     }
 
 }
 
 @media only screen and (min-width: 1024px) {
+
+    .about-me-container {
+        margin-top: -5%;
+        margin-bottom: 8%;
+    }
 
     .cta {
         width: 50%
@@ -413,6 +415,10 @@ input[type=submit] {
         width: 20px;
         padding: 0 1em 9em;
         margin: 0;
+    }
+
+    .first-portfolio{
+        margin-top: -5%
     }
 
     nav ul {
